--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center mb-4">
                                 <div class="flex-shrink-0">
-                                    <img src="https://ui-avatars.com/api/?name=John+Doe&background=random" class="rounded-circle" width="60" alt="Avatar">
+                                    <img src="https://ui-avatars.com/api/?name=Ujang+Slebew&background=random" class="rounded-circle" width="60" alt="Avatar">
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <h5 class="mb-0">John Doe</h5>
+                                    <h5 class="mb-0">Ujang Slebew</h5>
                                     <div class="text-warning">
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -206,7 +206,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="card-text">"Pelayanan sangat profesional dan cepat. PC saya kembali seperti baru!"</p>
+                            <p class="card-text">Wahh kelass kingg, rekomended pisan service di dieu!!</p>
                         </div>
                     </div>
                 </div>
@@ -215,10 +215,10 @@
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center mb-4">
                                 <div class="flex-shrink-0">
-                                    <img src="https://ui-avatars.com/api/?name=Jane+Smith&background=random" class="rounded-circle" width="60" alt="Avatar">
+                                    <img src="https://ui-avatars.com/api/?name=Ambatusyam&background=random" class="rounded-circle" width="60" alt="Avatar">
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <h5 class="mb-0">Jane Smith</h5>
+                                    <h5 class="mb-0">Ambatusyam</h5>
                                     <div class="text-warning">
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -228,7 +228,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="card-text">"Hasil perakitan PC gaming sangat memuaskan. Performa maksimal sesuai budget!"</p>
+                            <p class="card-text">Mas-mas teknisinya pada professiaonal plus pada baik loh rek ya </p>
                         </div>
                     </div>
                 </div>
@@ -237,10 +237,10 @@
                         <div class="card-body p-4">
                             <div class="d-flex align-items-center mb-4">
                                 <div class="flex-shrink-0">
-                                    <img src="https://ui-avatars.com/api/?name=David+Wilson&background=random" class="rounded-circle" width="60" alt="Avatar">
+                                    <img src="https://ui-avatars.com/api/?name=Rusdi+Ngawi&background=random" class="rounded-circle" width="60" alt="Avatar">
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <h5 class="mb-0">David Wilson</h5>
+                                    <h5 class="mb-0">Rusdi Ngawi</h5>
                                     <div class="text-warning">
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -250,7 +250,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="card-text">"Upgrade komponen PC berjalan lancar. Kinerja meningkat signifikan!"</p>
+                            <p class="card-text">Muantepppp PC saya langsung dapet 1000fps, mimpi apa ya saya semalem</p>
                         </div>
                     </div>
                 </div>
